--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -1,1 +1,32 @@
 h1 {color: red;}
+
+div.message {
+    text-align: center;
+    cursor: pointer;
+    display: block;
+    font-weight: normal;
+    transition: height 300ms ease-out 0s;
+    top: 15px;
+    right: 15px;
+    z-index: 999;
+    overflow: hidden;
+    line-height: 2.5em;
+    box-radius: 5px;
+}
+
+div.login {
+    margin-top: 9%;
+    background-color: white;
+}
+
+body {
+    background-color: #DCDCDC;
+}
+
+#div_form_login {
+    height: 280px;
+}
+
+#div_message_erro_login {
+    margin-top: 10px;
+}
